--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Juan Esteban Garcia",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
